# advent-of-code-2025

./: Cargo.toml
challenges/day-01/: part-01.rs  part-02.rs
challenges/day-02/: part-01.rs  part-02.rs
challenges/day-03/: part-01.rs  part-02.rs
challenges/day-04/: part-01.rs  part-02.rs
challenges/day-05/: part-01.rs  part-02.rs
challenges/day-06/: part-01.rs  part-02.rs
challenges/day-07/: part-01.rs  part-02.rs
src/: main.rs
