[package]
name = "advent-of-code-2025"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.11.1"

[[bin]]
name = "1-1"
path = "./challenges/day-01/part-01.rs"

[[bin]]
name = "1-2"
path = "./challenges/day-01/part-02.rs"

[[bin]]
name = "2-1"
path = "./challenges/day-02/part-01.rs"

[[bin]]
name = "2-2"
path = "./challenges/day-02/part-02.rs"

[[bin]]
name = "3-1"
path = "./challenges/day-03/part-01.rs"

[[bin]]
name = "3-2"
path = "./challenges/day-03/part-02.rs"

[[bin]]
name = "4-1"
path = "./challenges/day-04/part-01.rs"

[[bin]]
name = "4-2"
path = "./challenges/day-04/part-02.rs"

[[bin]]
name = "5-1"
path = "./challenges/day-05/part-01.rs"

[[bin]]
name = "5-2"
path = "./challenges/day-05/part-02.rs"

[[bin]]
name = "6-1"
path = "./challenges/day-06/part-01.rs"

[[bin]]
name = "6-2"
path = "./challenges/day-06/part-02.rs"

[[bin]]
name = "7-1"
path = "./challenges/day-07/part-01.rs"

[[bin]]
name = "7-2"
path = "./challenges/day-07/part-02.rs"

[[bin]]
name = "8-1"
path = "./challenges/day-08/part-01.rs"

[[bin]]
name = "8-2"
path = "./challenges/day-08/part-02.rs"

[[bin]]
name = "9-1"
path = "./challenges/day-09/part-01.rs"

[[bin]]
name = "9-2"
path = "./challenges/day-09/part-02.rs"

[[bin]]
name = "10-1"
path = "./challenges/day-10/part-01.rs"

[[bin]]
name = "10-2"
path = "./challenges/day-10/part-02.rs"

[[bin]]
name = "11-1"
path = "./challenges/day-11/part-01.rs"

[[bin]]
name = "11-2"
path = "./challenges/day-11/part-02.rs"

[[bin]]
name = "12-1"
path = "./challenges/day-12/part-01.rs"

[[bin]]
name = "12-2"
path = "./challenges/day-12/part-02.rs"
